--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "license": "MPL-2.0",
   "description": "BEM Tools",
   "homepage": "https://bem.info/toolbox/bem-tools/",
+  "bin": {
+    "bem": "./bin/bem"
+  },
   "author": [
     "Vladimir Grinenko <i@tadatuta.com> (https://github.com/tadatuta)",
     "Vitaly Harisov <vitaly@harisov.name> (https://github.com/vithar)"
@@ -24,7 +27,7 @@
     "url": "git://github.com/bem-tools/bem-tools.git"
   },
   "dependencies": {
-    "bem-tools-core": "^0.0.1",
+    "bem-tools-core": "^0.0.3",
     "bem-tools-create": "^1.1.0"
   },
   "engines": {
